--- a/app/src/main/res/layout/activity_add_list_data.xml
+++ b/app/src/main/res/layout/activity_add_list_data.xml
@@ -9,14 +9,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="50dp">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"
+            android:paddingBottom="150dp"></LinearLayout>
     </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
@@ -32,6 +33,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:visibility="visible"
         app:fabSize="normal"
         app:srcCompat="@drawable/ic_add_24dp" />
+
 </RelativeLayout>
